--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<p>Below are a few projects that I have worked on</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="projects/to do/" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Template Landing Page</h4>
 												<p>A simple website made to showcase a landing page that I could make for you.</p>
