Added links to images

--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
 									<p>Below are a few projects that I have worked on</p>
 									<div class="features">
 										<article>
-											<a href="projects/to do/" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="projects/jwlia/jwlia2.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Template Landing Page</h4>
 												<p>A simple website made to showcase a landing page that I could make for you.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="projects/todo/todo.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>To-Do List</h4>
 												<p>Web application that allows the user to note what they have to do, cross out what they have done, and remove the completed tasks off the list.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="projects/horoscope/horoscope.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Horoscope</h4>
 												<p>Web Application that displayus horoscope information based on the user's birthday.</p>
