--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<p>Below are a few projects that I have worked on</p>
 									<div class="features">
 										<article>
-											<a href="projects/jwlia/jwlia2.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="projects/jwlia/jwlia2.html" class="image"><img src="images/todo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Template Landing Page</h4>
 												<p>A simple website made to showcase a landing page that I could make for you.</p>
@@ -98,7 +98,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="projects/horoscope/horoscope.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="projects/horoscope/horoscope.html" class="image"><img src="images/horoscope.png" alt="" /></a>
 											<div class="inner">
 												<h4>Horoscope</h4>
 												<p>Web Application that displayus horoscope information based on the user's birthday.</p>
