--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/headshot.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Tiago S Dutra</a></h1>
 					<p>I am a software engineer ready to work with you.</p>
 				</header>
@@ -113,7 +113,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>I'll respond as soon as possible.</p>
-									<form method="post" action="#">
+									<form method="post" action="#" data-netlify="true">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
