--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+						
+						<li><a href="https://www.linkedin.com/in/tiago-s-dutra/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/tiagosdutra/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://twitter.com/tiagosdutra" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
 				</footer>
